# BulkPixel

./: .gitignore  AGENTS.md  README.md  changelog.md  package-lock.json  package.json  publish.sh
docs/: CLI.md  changelog.md
scripts/: bundle-macos-dylibs.mjs  publish.sh
src/: formatters.js  index.html  main.js  styles.css  ui.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  image_pipeline.rs  lib.rs  main.rs  models.rs  presets.rs
src/assets/icons/: icon_app_artboard.html
