[package]
name = "bulkpixel"
version = "1.0.0"
description = "BulkPixel desktop app"
authors = ["oli"]
edition = "2021"

[lib]
name = "bulkpixel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
dirs = "6"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "avif", "avif-native"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2"
webp = "0.3"
